--- a/minnano-frontend/package.json
+++ b/minnano-frontend/package.json
@@ -8,8 +8,9 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.16",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -36,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "tailwindcss": "^3.4.16"
+  }
 }
