added email verification for signup

--- a/minnano-backend/.env
+++ b/minnano-backend/.env
@@ -3,3 +3,6 @@ DB_HOST=localhost
 DB_NAME=minnano_db
 DB_PASSWORD=1234
 DB_PORT=5432
+EMAIL=no.reply.minnano@gmail.com
+EMAIL_PASSWORD=avoo fews mbxp xvmo
+
