--- a/minnano-backend/package.json
+++ b/minnano-backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react-router-dom": "^7.0.2"
   }
